<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.javierarboleda.newyorktimesarticlesearch.activities.SettingsActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            app:titleTextColor="@android:color/white"
            android:background="?attr/colorPrimary"
            android:theme="@style/ToolbarTheme">
        </android.support.v7.widget.Toolbar>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvBeginDateLabel"
            android:layout_below="@id/toolbar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="@dimen/left_margin"
            android:text="@string/beginDate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSortOrder"
            android:layout_below="@+id/tvBeginDateLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="@dimen/left_margin"
            android:text="@string/sortOrder"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:spinnerMode="dropdown"
            android:layout_alignTop="@+id/tvSortOrder"
            android:layout_alignLeft="@+id/cbArts"
            android:layout_alignStart="@+id/cbArts"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newsDeskValues"
            android:id="@+id/textView"
            android:layout_below="@+id/tvSortOrder"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="67dp"
            android:layout_marginLeft="@dimen/left_margin"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arts"
            android:id="@+id/cbArts"
            android:layout_alignBottom="@+id/textView"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:checked="false"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fashionAndStyle"
            android:id="@+id/cbFashionAndStyle"
            android:layout_below="@+id/cbArts"
            android:layout_alignLeft="@+id/cbArts"
            android:layout_alignStart="@+id/cbArts"
            android:checked="false"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            android:id="@+id/cbSports"
            android:layout_below="@+id/cbFashionAndStyle"
            android:layout_alignLeft="@+id/cbFashionAndStyle"
            android:layout_alignStart="@+id/cbFashionAndStyle"
            android:checked="false"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/btnSave"
            android:layout_marginTop="103dp"
            android:onClick="saveFiltersToSharedPreferences"
            android:layout_below="@+id/cbSports"
            android:layout_toRightOf="@+id/tvBeginDateLabel"
            android:layout_toEndOf="@+id/tvBeginDateLabel"/>

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clickToAddDate"
            android:id="@+id/tvBeginDate"
            android:layout_alignTop="@+id/tvBeginDateLabel"
            android:layout_alignLeft="@+id/spinner"
            android:layout_alignStart="@+id/spinner"
            android:onClick="pickBeginDate"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:id="@+id/btnClear"
            android:layout_alignBottom="@+id/btnSave"
            android:layout_toRightOf="@+id/cbSports"
            android:layout_toEndOf="@+id/cbSports"
            android:onClick="clearFilters"/>

    </RelativeLayout>
</layout>